change prepare image section location

--- a/docs/getting-started/prepare-image.ipynb
+++ b/docs/getting-started/prepare-image.ipynb
@@ -14,10 +14,16 @@
     "- [Annotated Ground Truth Dataset: DataFrame containing file names of the images, along with their ground truth labels](#section2)\n",
     "- [Model: Pipeline that processes image file paths before feeding into the final estimator](#section3)\n",
     "\n",
-    "If you would like to download and follow through this guide, you may download the relevant files via this [link](https://github.com/IMDA-BTG/aiverify/tree/docs/docs/getting-started/prepare-image-files.zip).\n",
-    "\n",
-    "## 1. Dataset Preparation\n",
+    "If you would like to download and follow through this guide, you may download the relevant files via this [link](https://github.com/IMDA-BTG/aiverify/tree/docs/docs/getting-started/prepare-image-files.zip)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='section1'></a>\n",
+    "## 1. Dataset Preparation\n",
     "AI Verify is able to process images stored in a folder. As such, you may prepare your testing data as a folder of images.\n",
     "\n",
     "An example of a folder structure you are required to have:\n",
