updated preparation for data and required fields for testing fairness on image

--- a/docs/getting-started/prepare-image.ipynb
+++ b/docs/getting-started/prepare-image.ipynb
@@ -837,7 +837,14 @@
     "In summary, for this example, users may upload the following for testing:\n",
     "- Data: 'data/raw_fashion_image_10' \n",
     "- Ground Truth Dataset/ Annotated Ground Truth Path: 'data/pickle_pandas_fashion_mnist_annotated_labels_10.sav' ; Select Ground Truth : `default` ; Name of column containing image file names : `file_name`\n",
-    "- Model: 'pipeline/multiclass_classification_image_mnist_fashion' ; Note that the model should be uploaded as a folder as it is a pipeline"
+    "- Model: 'pipeline/multiclass_classification_image_mnist_fashion' ; Note that the model should be uploaded as a folder as it is a pipeline\n",
+    "\n",
+    "\n",
+    "Alternatively, users can also test fairness on images with our sample data and model. The data, ground truth dataset and model can be found [here](https://github.com/IMDA-BTG/aiverify/tree/main/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/algorithms/fairness_metrics_toolbox_for_classification/tests/user_defined_files): \n",
+    "- Data: 'data:/small_test'\n",
+    "- Ground Truth Dataset/ Annotated Ground Truth Path: 'data/pickle_pandas_annotated_labels_50.sav' ; Select Ground Truth : `gender` ; Name of column containing image file names : `image_directory`\n",
+    "- Model: 'pipeline/bc_image_face'\n",
+    "- Sensitive Feature: `race`"
    ]
   }
  ],
