fix typos for image preparation notebook

--- a/docs/getting-started/prepare-image.ipynb
+++ b/docs/getting-started/prepare-image.ipynb
@@ -836,7 +836,7 @@
     "\n",
     "In summary, for this example, users may upload the following for testing:\n",
     "- Data: 'data/raw_fashion_image_10' \n",
-    "- Ground Truth Dataset/ Annotated Ground Truth Path: 'data/pickle_pandas_fashion_mnist_annotated_labels_10.sav' ; Select Ground Truth : `default` ; Name of column containing image file names : `file_name`\n",
+    "- Ground Truth Dataset/ Annotated Ground Truth Path: 'data/pickle_pandas_fashion_mnist_annotated_labels_10.sav' ; Select Ground Truth : `labels` ; Name of column containing image file names : `file_name`\n",
     "- Model: 'pipeline/multiclass_classification_image_mnist_fashion' ; Note that the model should be uploaded as a folder as it is a pipeline\n",
     "\n",
     "\n",
