--- a/stock-plugins/aiverify.stock.veritas/algorithms/veritastool/examples/customer_marketing_example/CM_demo.ipynb
+++ b/stock-plugins/aiverify.stock.veritas/algorithms/veritastool/examples/customer_marketing_example/CM_demo.ipynb
@@ -563,12 +563,12 @@
        "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Uplifter(clf=Pipeline(steps=[(&#x27;standardscaler&#x27;, StandardScaler()),\n",
        "                             (&#x27;logisticregression&#x27;,\n",
        "                              LogisticRegression(multi_class=&#x27;multinomial&#x27;))]),\n",
-       "         liftfn=&lt;function multiclass_lift at 0x1078a3130&gt;,\n",
-       "         selectionfn=functools.partial(&lt;function threshold at 0x146311ab0&gt;, thresh=0.0))</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;Uplifter<span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>Uplifter(clf=Pipeline(steps=[(&#x27;standardscaler&#x27;, StandardScaler()),\n",
+       "         liftfn=&lt;function multiclass_lift at 0x1037ef640&gt;,\n",
+       "         selectionfn=functools.partial(&lt;function threshold at 0x127ede050&gt;, thresh=0.0))</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;Uplifter<span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>Uplifter(clf=Pipeline(steps=[(&#x27;standardscaler&#x27;, StandardScaler()),\n",
        "                             (&#x27;logisticregression&#x27;,\n",
        "                              LogisticRegression(multi_class=&#x27;multinomial&#x27;))]),\n",
-       "         liftfn=&lt;function multiclass_lift at 0x1078a3130&gt;,\n",
-       "         selectionfn=functools.partial(&lt;function threshold at 0x146311ab0&gt;, thresh=0.0))</pre></div> </div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">clf: Pipeline</label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;standardscaler&#x27;, StandardScaler()),\n",
+       "         liftfn=&lt;function multiclass_lift at 0x1037ef640&gt;,\n",
+       "         selectionfn=functools.partial(&lt;function threshold at 0x127ede050&gt;, thresh=0.0))</pre></div> </div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">clf: Pipeline</label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;standardscaler&#x27;, StandardScaler()),\n",
        "                (&#x27;logisticregression&#x27;,\n",
        "                 LogisticRegression(multi_class=&#x27;multinomial&#x27;))])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;StandardScaler<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.preprocessing.StandardScaler.html\">?<span>Documentation for StandardScaler</span></a></label><div class=\"sk-toggleable__content fitted\"><pre>StandardScaler()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(multi_class=&#x27;multinomial&#x27;)</pre></div> </div></div></div></div></div></div></div></div></div></div></div>"
       ],
@@ -576,8 +576,8 @@
        "Uplifter(clf=Pipeline(steps=[('standardscaler', StandardScaler()),\n",
        "                             ('logisticregression',\n",
        "                              LogisticRegression(multi_class='multinomial'))]),\n",
-       "         liftfn=<function multiclass_lift at 0x1078a3130>,\n",
-       "         selectionfn=functools.partial(<function threshold at 0x146311ab0>, thresh=0.0))"
+       "         liftfn=<function multiclass_lift at 0x1037ef640>,\n",
+       "         selectionfn=functools.partial(<function threshold at 0x127ede050>, thresh=0.0))"
       ]
      },
      "execution_count": 3,
@@ -762,7 +762,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b0c3342fe1b4bf29209734b8271174c",
+       "model_id": "40b146c5e85c47c2a78576ab676c4c16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -800,8 +800,8 @@
       "\n",
       "\n",
       "Performance Metrics\n",
-      "\tEmpirical Lift                                             0.158 +/- 0.028\n",
-      "\u001b[1m\tExpected Profit Lift                                74658.798 +/- 4747.256\u001b[0m\n",
+      "\tEmpirical Lift                                             0.158 +/- 0.025\n",
+      "\u001b[1m\tExpected Profit Lift                                74658.798 +/- 5605.930\u001b[0m\n",
       "\tExpected Selection Rate                                    0.504 +/- 0.010\n",
       "\n",
       "\n",
@@ -822,7 +822,7 @@
       "\n",
       "Fairness Metrics\n",
       "\u001b[1m\tHarm from Rejection                                       -0.002 +/- 0.002\u001b[0m\n",
-      "\tBenefit from Acquiring                                     0.069 +/- 0.006\n",
+      "\tBenefit from Acquiring                                     0.069 +/- 0.005\n",
       "\n",
       "\n",
       "Fairness Conclusion\n",
@@ -838,7 +838,7 @@
       "\n",
       "Fairness Metrics\n",
       "\u001b[1m\tHarm from Rejection                                        0.003 +/- 0.001\u001b[0m\n",
-      "\tBenefit from Acquiring                                     0.021 +/- 0.006\n",
+      "\tBenefit from Acquiring                                     0.021 +/- 0.007\n",
       "\n",
       "\n",
       "Fairness Conclusion\n",
@@ -854,7 +854,7 @@
       "\n",
       "Fairness Metrics\n",
       "\u001b[1m\tHarm from Rejection                                        0.001 +/- 0.001\u001b[0m\n",
-      "\tBenefit from Acquiring                                     0.052 +/- 0.006\n",
+      "\tBenefit from Acquiring                                     0.052 +/- 0.008\n",
       "\n",
       "\n",
       "Fairness Conclusion\n",
@@ -862,7 +862,7 @@
       "\tFairness Threshold                                                     80%\n",
       "\n",
       "\n",
-      "*Disclaimer: The outcome is calculated based on your inputs and is provided for informational purposes only. \n",
+      "*Disclaimer: The outcome is calculated based on your inputs and is provided for informational purposes only.\n",
       "            Should you decide to act upon the information herein, you do so at your own risk and Veritas Toolkit will not be liable or responsible in any way. \n"
      ]
     }
@@ -906,7 +906,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d75c05bfb3774820b59bc572e0660c05",
+       "model_id": "40b108c262ca4f2bbdcdd16eaaa17c49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -931,7 +931,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f9ecb2bd2564cbebefd7dbe238214e1",
+       "model_id": "7d00ea5b7cbd47ad8d3e8787f04a7bf3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1025,7 +1025,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec31b98972a942c6b3f921cd4726a1c2",
+       "model_id": "61b4d5f498fe4adc8d28e40dd1285ed8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1084,7 +1084,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cef21fe4314425ab9c05767fccd4697",
+       "model_id": "6827f14ee6094fc5bd5d35c46a27250a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1099,7 +1099,100 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correlation matrix skipped\n"
+      "\n",
+      "Partial correlation matrix (Most correlated features for isfemale, isforeign):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>isfemale</th>\n",
+       "      <th>isforeign</th>\n",
+       "      <th>noproducts</th>\n",
+       "      <th>income</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>isfemale</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.022928</td>\n",
+       "      <td>0.172496</td>\n",
+       "      <td>0.467237</td>\n",
+       "      <td>0.037134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>isforeign</th>\n",
+       "      <td>0.022928</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.089294</td>\n",
+       "      <td>0.272970</td>\n",
+       "      <td>0.292067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>noproducts</th>\n",
+       "      <td>0.172496</td>\n",
+       "      <td>0.089294</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.448823</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>income</th>\n",
+       "      <td>0.467237</td>\n",
+       "      <td>0.272970</td>\n",
+       "      <td>0.448823</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.031726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>0.037134</td>\n",
+       "      <td>0.292067</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.031726</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            isfemale  isforeign  noproducts    income       age\n",
+       "isfemale    1.000000   0.022928    0.172496  0.467237  0.037134\n",
+       "isforeign   0.022928   1.000000    0.089294  0.272970  0.292067\n",
+       "noproducts  0.172496   0.089294    1.000000  0.448823  0.000000\n",
+       "income      0.467237   0.272970    0.448823  1.000000  0.031726\n",
+       "age         0.037134   0.292067    0.000000  0.031726  1.000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* No surrogate detected based on correlation analysis (threshold=0.7).\n"
      ]
     }
    ],
@@ -1116,7 +1209,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "357c2e726a8c45d6a0e7aa08e92ee77b",
+       "model_id": "6848fe725082426b96d979baf890caf8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1180,7 +1273,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64dcdaa7c8f54c14ae80277fee6bf867",
+       "model_id": "0a29ece8f9f24c9f82c55d0f57e2d92d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1310,7 +1403,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4cbd6a6307f4b5aa43dc0347826baa2",
+       "model_id": "2531db5dc4fe487aa1b3f50b0a3384fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1353,16 +1446,16 @@
     {
      "data": {
       "text/plain": [
-       "array([1.05763338, 0.97575389, 0.97575389, 1.0903879 , 1.44836422,\n",
-       "       1.05442423, 0.98850261, 0.9619539 , 0.97856992, 1.0085577 ,\n",
-       "       1.0903879 , 1.22755236, 0.97856992, 1.56821163, 0.9619539 ,\n",
-       "       0.97575389, 0.97575389, 0.97575389, 0.97575389, 0.98850261,\n",
-       "       1.0903879 , 0.97575389, 1.05442423, 1.05442423, 0.98850261,\n",
-       "       0.97856992, 0.98850261, 0.97856992, 0.9619539 , 0.97575389,\n",
-       "       1.05442423, 1.05442423, 0.98850261, 0.98850261, 1.0085577 ,\n",
-       "       0.98850261, 1.0903879 , 0.97575389, 1.0903879 , 0.97856992,\n",
-       "       0.97856992, 0.97856992, 1.0085577 , 0.97575389, 0.97856992,\n",
-       "       0.98850261, 0.97575389, 0.98850261, 0.97575389, 0.9619539 ])"
+       "array([1.0903879 , 0.98850261, 0.97575389, 0.97575389, 0.98850261,\n",
+       "       0.97856992, 0.97575389, 0.9619539 , 0.9619539 , 0.97856992,\n",
+       "       0.9619539 , 0.97856992, 1.0903879 , 1.05763338, 1.0903879 ,\n",
+       "       0.97575389, 1.05763338, 1.05763338, 1.05442423, 0.97575389,\n",
+       "       0.97575389, 0.97575389, 0.98850261, 0.97575389, 0.97856992,\n",
+       "       0.98850261, 0.9619539 , 0.9619539 , 1.0903879 , 0.97575389,\n",
+       "       1.0085577 , 1.0085577 , 0.98850261, 0.97575389, 1.0903879 ,\n",
+       "       0.98850261, 0.97856992, 0.97575389, 0.97575389, 1.0903879 ,\n",
+       "       1.0903879 , 0.9619539 , 0.9619539 , 0.64978732, 0.9619539 ,\n",
+       "       0.98850261, 0.97575389, 0.97575389, 0.9619539 , 1.05442423])"
       ]
      },
      "execution_count": 17,
@@ -1402,7 +1495,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c99ad8b57382450e9476354483a1f28f",
+       "model_id": "9b9d48ee75a2445e9e20aaf11f3bd953",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1540,7 +1633,7 @@
       "Running tradeoff                        done      \n",
       "Running feature importance              done      \n",
       "     leave-one-out analysis             done      \n",
-      "     correlation analysis               skipped   \n",
+      "     correlation analysis               done      \n",
       "Running transparency for model 1        done      \n",
       "     Partial dependence                 done      \n"
      ]
@@ -1548,7 +1641,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc8b4a4632b3447e9048e14d5efc90ab",
+       "model_id": "dc079806bdd84e0a82f3cab0c011cbfb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1595,7 +1688,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
