remove heading widgets and fix classNames in plugins

--- a/stock-plugins/aiverify.stock.accumulated-local-effect/widgets/introduction.mdx
+++ b/stock-plugins/aiverify.stock.accumulated-local-effect/widgets/introduction.mdx
@@ -1,5 +1,5 @@
 <div style={{width:"100%"}}>
-  <h3 class="c-primary">Accumulated Local Effects</h3>
+  <h3 className="c-primary">Accumulated Local Effects</h3>
   <i>Accumulated Local Effects (ALE)</i> calculate how your features affect your predictions based on their respective feature values.
 
   <span>
