--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/introduction-ict.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/introduction-ict.mdx
@@ -1,5 +1,5 @@
 <div style={{width:"100%"}}>
-  <h3 class="c-primary">Robustness (Image Corruptions) Toolbox</h3>
+  <h3 className="c-primary">Robustness (Image Corruptions) Toolbox</h3>
   <span>
     <i>Robustness Toolbox</i> generates corrupted images based on the given test samples and computes the accuracy of the model.  
   </span>
