--- a/stock-plugins/aiverify.stock.partial-dependence-plot/widgets/introduction.mdx
+++ b/stock-plugins/aiverify.stock.partial-dependence-plot/widgets/introduction.mdx
@@ -1,5 +1,5 @@
 <div style={{width:"100%"}}>
-  <h3 class="c-primary">Partial Dependence Plot</h3>
+  <h3 className="c-primary">Partial Dependence Plot</h3>
   <i>Partial dependence plot (PDP)</i> calculate how your features affect your predictions based on their respective feature values.
 
   <p>
