--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_interpretationtype.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_interpretationtype.mdx
@@ -12,7 +12,7 @@ export const TechnicalInterpretationChart = ({ metric, container, data }) => {
     for (let oc in display) {
       const item = display[oc]
       content.push(
-      <div style={{border:"1px solid black", backgroundColor:"#eee", textAlign:"center", padding:'5px', marginBottom: '5px'}}>
+      <div key={Math.round(item.parity * 1000 + Number.EPSILON) / 1000} style={{border:"1px solid black", backgroundColor:"#eee", textAlign:"center", padding:'5px', marginBottom: '5px'}}>
         {/* {item.outputClass}<br/>{item.minName} vs {item.maxName}<br/>{Math.round(item.parity * 1000 + Number.EPSILON) / 1000}<br/> */}
         {item.minName} vs {item.maxName}<br/>
         {item.outputClass}<br/>{Math.round(item.parity * 1000 + Number.EPSILON) / 1000}<br/>
