--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_metrics.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_metrics.mdx
@@ -24,6 +24,7 @@ export const GetAllMetrics = ({ container, results }) => {
   for (var i = 0; i < metrics.length; i++) {
     if (metrics[i] == "Equal Selection Parity" || metrics[i] == "Disparate Impact"){
       content.push(<TechnicalInterpretationChart2
+        key={`${metrics[i]}-${i}`}
         metric={metrics[i]}
         container={container}
         data={results}
@@ -31,6 +32,7 @@ export const GetAllMetrics = ({ container, results }) => {
     }
     else{
       content.push(<TechnicalInterpretationChart
+        key={`${metrics[i]}-${i}`}
         metric={metrics[i]}
         container={container}
         data={results}
@@ -42,20 +44,17 @@ export const GetAllMetrics = ({ container, results }) => {
   )
 }
 
-<>
-  <div>
-    <h3>Fairness Metrics</h3>
-    The displayed metric(s) demonstrate the equity between two subgroups. In cases where the selected feature consists of more than two subgroups (such as race with multiple subgroups), the parity value is determined by comparing the subgroup with the smallest value to the subgroup with the largest value.
-    <ul>
-      <li><i>Disparate Impact</i>: The closer the value is to 1, the better it is.</li>
-      <li><i>Equal Selection Parity</i>: The smaller the value, the better it is.</li>
-      <li>Other fairness metrics: The smaller the value, the better it is</li>
-    </ul>
-    
-    <br/>
-    <GetAllMetrics
-      container={props.container}
-      results={props.getResults(cid)}
-    />
-  </div>
-</>
+  ### Fairness Metrics
+  
+  The displayed metric(s) demonstrate the equity between two subgroups. In cases where the selected feature consists of more than two subgroups (such as race with multiple subgroups), the parity value is determined by comparing the subgroup with the smallest value to the subgroup with the largest value.
+  <ul>
+    <li><i>Disparate Impact</i>: The closer the value is to 1, the better it is.</li>
+    <li><i>Equal Selection Parity</i>: The smaller the value, the better it is.</li>
+    <li>Other fairness metrics: The smaller the value, the better it is</li>
+  </ul>
+  
+  <br/>
+  <GetAllMetrics
+    container={props.container}
+    results={props.getResults(cid)}
+  />
