--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_interpretationtype2.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_interpretationtype2.mdx
@@ -1,6 +1,6 @@
 import React, { useEffect, useState } from 'react';
 
-export const TechnicalInterpretationChart2 = ({ metric, container, data }) => {
+export const TechnicalInterpretationChart2 = ({ metric, data }) => {
   const [mydata, setmydata] = useState({
     data: [],
     numLabels: 0,
