--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_interpretationtype.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_interpretationtype.mdx
@@ -1,6 +1,6 @@
 import React, { useEffect, useState } from 'react';
 
-export const TechnicalInterpretationChart = ({ metric, data }) => {
+export const TechnicalInterpretationChart = ({ id, metric, data }) => {
   const [mydata, setmydata] = useState({
     data: [],
     numFeatureLabels: 0,
@@ -9,11 +9,11 @@ export const TechnicalInterpretationChart = ({ metric, data }) => {
   // more than one group, hence use for min and max subgroups
   function getContent(display) {
     let content = [];
+    let i = 0;
     for (let oc in display) {
       const item = display[oc]
       content.push(
-      <div key={Math.round(item.parity * 1000 + Number.EPSILON) / 1000} style={{border:"1px solid black", backgroundColor:"#eee", textAlign:"center", padding:'5px', marginBottom: '5px'}}>
-        {/* {item.outputClass}<br/>{item.minName} vs {item.maxName}<br/>{Math.round(item.parity * 1000 + Number.EPSILON) / 1000}<br/> */}
+      <div key={`${id}-${i++}-type1`} style={{border:"1px solid black", backgroundColor:"#eee", textAlign:"center", padding:'5px', marginBottom: '5px'}}>
         {item.minName} vs {item.maxName}<br/>
         {item.outputClass}<br/>{Math.round(item.parity * 1000 + Number.EPSILON) / 1000}<br/>
       </div>
@@ -92,7 +92,7 @@ export const TechnicalInterpretationChart = ({ metric, data }) => {
   }, [metric, data])
 
   return (
-    <div style={{ width: "33%", float:"left", textAlign:"center", padding:"5px"}}>
+    <div style={{ display: 'flex', flexDirection: 'column', gap: 5, width: '40%', flexShrink: 0 }}>
       <h4>{metric}</h4>
       {getContent(mydata.data)}
     </div>
