Add blur corruption preview notebook

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/aiverify_blur_corruptions/utils/blur.ipynb
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/aiverify_blur_corruptions/utils/blur.ipynb
@@ -21,6 +21,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from aiverify_blur_corruptions.utils.blur import gaussian_blur\n",
+    "\n",
+    "print(f\"original\")\n",
+    "display(Image.fromarray(image))\n",
+    "\n",
+    "for sigma in DEFAULT_PARAMS[\"gaussian_blur_sigma\"]:\n",
+    "    out = gaussian_blur(image, sigma=sigma)\n",
+    "    print(f\"sigma={sigma}\")\n",
+    "    display(Image.fromarray(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aiverify_blur_corruptions.utils.blur import glass_blur\n",
+    "\n",
+    "print(f\"original\")\n",
+    "display(Image.fromarray(image))\n",
+    "\n",
+    "for max_delta in DEFAULT_PARAMS[\"glass_blur_max_delta\"]:\n",
+    "    out = glass_blur(image, max_delta=max_delta)\n",
+    "    print(f\"max_delta={max_delta}\")\n",
+    "    display(Image.fromarray(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aiverify_blur_corruptions.utils.blur import defocus_blur\n",
+    "\n",
+    "print(f\"original\")\n",
+    "display(Image.fromarray(image))\n",
+    "\n",
+    "for radius in DEFAULT_PARAMS[\"defocus_blur_radius\"]:\n",
+    "    out = defocus_blur(image, radius=radius)\n",
+    "    print(f\"radius={radius}\")\n",
+    "    display(Image.fromarray(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aiverify_blur_corruptions.utils.blur import horizontal_motion_blur\n",
+    "\n",
+    "print(f\"original\")\n",
+    "display(Image.fromarray(image))\n",
+    "\n",
+    "for kernel_size in DEFAULT_PARAMS[\"horizontal_motion_blur_kernel_size\"]:\n",
+    "    out = horizontal_motion_blur(image, kernel_size=kernel_size)\n",
+    "    print(f\"kernel_size={kernel_size}\")\n",
+    "    display(Image.fromarray(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aiverify_blur_corruptions.utils.blur import vertical_motion_blur\n",
+    "\n",
+    "print(f\"original\")\n",
+    "display(Image.fromarray(image))\n",
+    "\n",
+    "for kernel_size in DEFAULT_PARAMS[\"vertical_motion_blur_kernel_size\"]:\n",
+    "    out = vertical_motion_blur(image, kernel_size=kernel_size)\n",
+    "    print(f\"kernel_size={kernel_size}\")\n",
+    "    display(Image.fromarray(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from aiverify_blur_corruptions.utils.blur import zoom_blur\n",
     "\n",
     "print(f\"original\")\n",
@@ -35,7 +120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "aiverify",
    "language": "python",
    "name": "python3"
   },
